<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SharedPreferences</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_main_title">Shared Preferences Example</string>
    <string name="empty">empty</string>
    <string name="txtUsernameLabel">Your username is: </string>
    <string name="txtResetUsernameLabel">Enter a new username: </string>
    <string name="hintResetUsernameLabel">username</string>
    <string name="btnSaveUsername">Save</string>
    <string name="btnCancelAndClear">Cancel and clear</string>

</resources>